--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,9 @@ dependencies {
     //BCrypt 라이브러리
     implementation 'org.springframework.security:spring-security-crypto:6.5.1'
 
+    //jpa
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
     //jwt
     compileOnly 'io.jsonwebtoken:jjwt-api:0.12.6'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
