--- a/build.gradle
+++ b/build.gradle
@@ -18,12 +18,14 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     //BCrypt 라이브러리
     implementation 'org.springframework.security:spring-security-crypto:6.5.1'
+
+    //jpa
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
     //jwt
     compileOnly 'io.jsonwebtoken:jjwt-api:0.12.6'
