chore: 삭제 수정 시 필요한 설정 파일 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.sql.init.mode=always
 jwt.secret=Yn2kjibddFAWtnPJ2AFlL8WXmohJMCvigQggaEypa5E=
+spring.mvc.hiddenmethod.filter.enabled=true
